# iOSParityLightClient

./: .gitignore  Ethash.metal  Marathonfile  README.md  StaticLibTest-Bridging-Header.h  main.swift
EthashMetalTest/: Package.swift
EthashMetalTest/Ethash/: Common.swift  EthashCPP.swift  EthashCPU.swift  EthashGPU.swift  EthashTests.swift
EthashMetalTest/EthashMetalTest/: AppDelegate.swift  EthashMetalTest-Bridging-Header.h  ViewController.swift
EthashMetalTest/EthashMetalTest.xcodeproj/: project.pbxproj
EthashMetalTest/EthashMetalTest.xcodeproj/xcshareddata/xcschemes/: EthashMetalTest.xcscheme  GPUEthashTest.xcscheme
EthashMetalTest/EthashMetalTest.xcodeproj/xcuserdata/jakubtomanik.xcuserdatad/xcschemes/: xcschememanagement.plist
EthashMetalTest/EthashMetalTest/Ethash/: Common.swift  Ethash.swift  EthashCPU.swift  EthashGPU.swift  EthashTests.swift
EthashMetalTest/EthashMetalTest/Metal/: Ethash.h  Ethash.metal  Ethash.txt  Metal.metal  cache.metal  helpers.metal  keccak.metal
EthashMetalTest/EthashMetalTest/libethash/: data_sizes.h  endian.h  ethash.h  fnv.h  internal.c  internal.h  mmap.h  sha3.c  sha3.h  util.h
EthashMetalTest/GPUEthashTest/: Ethash.swift  GPUEthashTest-Bridging-Header.h  main.swift
EthashMetalTest/GPUEthashTest/EthashCpp/: Ethash.cpp  keccak.cpp  keccak.hpp
EthashMetalTest/libethash/: Ethash.h  common.h  data_sizes.h  internal.h  mem.h  sha3.c  sha3expanded.c
EthashMetalTest/libethash/C/: endian.h  ethash.h  internal.c  internal.h  sha3.c  sha3.h
EthashMetalTest/libethash/CPP/: EthashObjCPP.h  EthashObjCPP.mm  ethash.h  ethash.hpp  internal.cpp  internal.hpp  keccak.cpp  keccak.hpp  keccakcpp.txt  mem.hpp
EthashMetalTest/libethash/Metal/: Ethash.air  Ethash.metal  Ethashmetal.metal  Ethashmetal.txt  ethash.h  internal.air  internal.metal  keccak.air  mem.air
EthashMetalTest/targets/: EthashMetalLib-Mac.metallib
EthashMetalTest/targets/CmdTestC/: Bridging-Header.h  main.swift
EthashMetalTest/targets/CmdTestCpp/: Bridging-Header.h  main.swift
EthashMetalTest/targets/CmdTestMetal/: Bridging-Header.h  main.swift
EthashMetalTest/targets/EthashMetalLib-Mac/: EthashMetalLib_Mac.metal
EthashPlayground.playground/: Contents.swift
Rust/: README.md
Rust/heapsize-0.4.2/src/: lib.rs
Rust/kvdb-rocksdb-0.1.4/: Cargo.toml
Rust/kvdb-rocksdb-0.1.4/src/: lib.rs
Rust/misc/: Misc.md  custom_foundation.json  hardcoded_sync_6469818.json  heapsize.ios.patch  node.config.toml  paritylib_log_jemalloc_2_veryfiers_run1.txt  paritylib_log_malloc_1_veryfier.txt  paritylib_log_malloc_1_veryfier_iphone_crash.txt  paritylib_log_malloc_2_veryfiers.txt  paritylib_log_malloc_2_veryfiers_run2.txt  rust-crypto.pr419.patch  test.h
Rust/parity-clib/: Cargo.toml  build.rs  cbindgen.toml  parity.h
Rust/parity-clib/parity-light-lib/: Cargo.toml
Rust/parity-clib/parity-light-lib/src/: lib.rs  memory_store.rs  run.rs
Rust/parity-clib/src/: helpers.rs  lib.rs  logger.rs  main.rs
Rust/parity-rocksdb-sys-0.5.3/: Cargo.toml  build.rs
Rust/parity-rocksdb-sys-0.5.3/rocksdb/: Makefile
Rust/parity-rocksdb-sys-0.5.3/rocksdb/db/: c.cc
Rust/parity-rocksdb-sys-0.5.3/rocksdb/include/rocksdb/: convenience.h
Rust/parity-rocksdb-sys-0.5.3/rocksdb/options/: options_helper.cc
Rust/parity-rocksdb-sys-0.5.3/rocksdb/util/: arena.cc
Rust/rust-crypto-0.2.36/src/: util_helpers.c
StaticLibTest/: AppDelegate.swift  LogParser.swift  LogViewController.swift  Parity.swift  RequestViewController.swift  SettingsViewController.swift  ViewController.swift
StaticLibTest.xcodeproj/: project.pbxproj
StaticLibTest.xcodeproj/xcuserdata/jakubtomanik.xcuserdatad/xcschemes/: xcschememanagement.plist
StaticLibTest.xcworkspace/: contents.xcworkspacedata
StaticLibTest/Base.lproj/: Main.storyboard
lib/: custom_foundation.json  jemalloc.h  parity.h
