[package]
description = "C bindings for the Parity Ethereum client"
name = "parity-clib"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
name = "parity"
path = "src/lib.rs"
[dependencies]
panic_hook = { path = "../util/panic_hook" }
parity-ethereum = { git = "https://github.com/jtomanik/Experimental-Parity-Lib-for-iOS.git", branch = "master" }

[features]
default = []
malloc = []
jemalloc = []
