[package]
description = "C bindings for the Parity Ethereum client"
name = "parity-clib"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
name = "parity"
path = "src/lib.rs"
[dependencies]
panic_hook = { path = "../util/panic_hook" }
parity-ethereum = { git = "https://github.com/jtomanik/Experimental-Parity-Lib-for-iOS.git", branch = "master" }
[patch.crates-io]
heapsize  = { path = '../heapsize-0.4.2' }
rust-crypto  = { path = '../rust-crypto-0.2.36' }
parity-rocksdb-sys = { path = '../parity-rocksdb-sys-0.5.3' }
kvdb-rocksdb  = { path = '../kvdb-rocksdb-0.1.4' }

[features]
default = []
malloc = []
jemalloc = []
