[package]
description = "C bindings for the Parity Ethereum client"
name = "parity-clib"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"

[lib]
name = "parity"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "libexample"
path = "src/main.rs"
doc = false

[build-dependencies]
cbindgen = "0.6"

[dependencies]
panic_hook = { path = "../../../../github/parity/util/panic-hook" }
ethcore-logger = { path = "../../../../github/parity/parity/logger" }
#parity-ethereum = { git = "https://github.com/jtomanik/Experimental-Parity-Lib-for-iOS.git", branch = "develop", features = [] }
#parity-ethereum = { path = "../../../../github/parity" }
parity-ethereum-light = { path = "parity-light-lib" }
log = { version = "0.4", features = ["std"] }
lazy_static = "1.0"
regex = "1.0"

[patch.crates-io]
heapsize  = { path = '../heapsize-0.4.2' }
rust-crypto  = { path = '../rust-crypto-0.2.36' }
parity-rocksdb-sys = { path = '../parity-rocksdb-sys-0.5.3' }
kvdb-rocksdb  = { path = '../kvdb-rocksdb-0.1.4' }

[features]
default = []
malloc = []
jemalloc = []
